# rules_nodejs_repro

./: README.md  WORKSPACE
app/: BUILD.bazel  package.json  tsconfig.json
app/src/: foo.ts  main.ts
lib_a/: BUILD.bazel  package.json  tsconfig.json
lib_a/src/: main.ts
