load("@app_npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "with_lib",
    srcs = ["src/foo.ts"],
    deps = ["//lib_a:ts_library"], # Adding this dep fails
    tsconfig = "tsconfig.json",
)

ts_library(
    name = "foo",
    srcs = ["src/foo.ts"],
    deps = ["@app_npm//:node_modules"],
    tsconfig = "tsconfig.json",
)

ts_library(
    name = "main",
    srcs = ["src/main.ts"],
    deps = [
        "@app_npm//:node_modules",
        ":foo",
    ],
    tsconfig = "tsconfig.json",
)
